<?xml version="1.0"?>
<package format="2">
  <name>safe_landing</name>
  <version>0.1.0</version>
  <description>
    Quadrotor obstacle-aware landing pipeline:
    landing-zone evaluation (RANSAC plane + clearance) on FAST-LIO point cloud,
    guarded descent with proximity detection, optional AR-marker fine-alignment,
    and PX4 AUTO.LAND handover. Designed to slot into an existing
    EGO-Planner + MAVROS + FAST-LIO stack.
  </description>
  <maintainer email="tom@example.com">tom</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>

  <!-- Optional: marker-based fine alignment. The package builds without it; -->
  <!-- the marker callback is conditionally enabled at runtime via params.   -->
  <exec_depend>ar_track_alvar_msgs</exec_depend>
</package>
